--- a/StoreSales/StoreSales.ipynb
+++ b/StoreSales/StoreSales.ipynb
@@ -29,11 +29,11 @@
    "metadata": {},
    "source": [
     "The training data; <br>\n",
-    "'store_nbr' identifies the store at which the products are sold.<br>\n",
-    "'family' identifies the type of product sold.<br>\n",
-    "'sales' gives the total sales for a product family at a particular store at a given date.\n",
+    "***store_nbr*** identifies the store at which the products are sold.<br>\n",
+    "***family*** identifies the type of product sold.<br>\n",
+    "***sales*** gives the total sales for a product family at a particular store at a given date.\n",
     "Fractional values are possible since products can be sold in fractional units (1.5 kg of cheese, for instance, as opposed to 1 bag of chips).<br>\n",
-    "'onpromotion' gives the total number of items in a product family that were being promoted at a store at a given date."
+    "***onpromotion*** gives the total number of items in a product family that were being promoted at a store at a given date."
    ]
   },
   {
