--- a/StoreSales/StoreSales.ipynb
+++ b/StoreSales/StoreSales.ipynb
@@ -275,7 +275,7 @@
     "# Grouping by Dates\n",
     "df = dataset.groupby(by=\"date\").sum()\n",
     "\n",
-    "# # Including 'date_parsed' as a column\n",
+    "# Including 'date_parsed' as a column\n",
     "df.reset_index(inplace=True)\n",
     "df = df.drop(labels=['id', 'store_nbr', 'onpromotion'], axis=1)\n",
     "df['time'] = df.index\n",
