--- a/StoreSales/StoreSales_Competition.ipynb
+++ b/StoreSales/StoreSales_Competition.ipynb
@@ -1,6 +1,681 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup notebook\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import datetime\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ignore Future Warning\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup\n",
+    "train = pd.read_csv('train.csv', parse_dates=[\"date\"])\n",
+    "test = pd.read_csv('test.csv', parse_dates=[\"date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3000888, 6) (28512, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>family</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3000888</td>\n",
+       "      <td>2017-08-16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AUTOMOTIVE</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3000889</td>\n",
+       "      <td>2017-08-16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BABY CARE</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3000890</td>\n",
+       "      <td>2017-08-16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BEAUTY</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3000891</td>\n",
+       "      <td>2017-08-16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BEVERAGES</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3000892</td>\n",
+       "      <td>2017-08-16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BOOKS</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id       date  store_nbr      family  onpromotion\n",
+       "0  3000888 2017-08-16          1  AUTOMOTIVE            0\n",
+       "1  3000889 2017-08-16          1   BABY CARE            0\n",
+       "2  3000890 2017-08-16          1      BEAUTY            2\n",
+       "3  3000891 2017-08-16          1   BEVERAGES           20\n",
+       "4  3000892 2017-08-16          1       BOOKS            0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(train.shape, test.shape)\n",
+    "# train.head()\n",
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Grouping by \"date\" and \"family\"\n",
+    "# train_df = train.groupby(by=[\"id\", \"family\"]).sum()\n",
+    "# train_df.head()\n",
+    "\n",
+    "# print(train_df .shape)\n",
+    "# train_df[-5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Grouping by \"date\" and \"family\"\n",
+    "# test_df = test.groupby(by=[\"id\", \"family\"]).sum()\n",
+    "# test_df.head()\n",
+    "\n",
+    "# print(test_df .shape)\n",
+    "# test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Error Function (RMSLE)\n",
+    "\n",
+    "def error(y_p, y_t):\n",
+    "    # y_p: predictted (fitted)\n",
+    "    # y_t: test (actual)\n",
+    "    pred_log = np.array([math.log(i+1) for i in np.nditer(y_p)])\n",
+    "    act_log = np.array([math.log(i+1) for i in np.nditer(y_t)])\n",
+    "    dum_error = sum((pred_log - act_log)**2)/len(pred_log)\n",
+    "    linear_error = np.power(dum_error, 1/2)\n",
+    "    return round(linear_error, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Blue print\n",
+    "pre : separate train data set into \"ourtrain\" and \"ourtest\" (**sorted**, 70:30)\n",
+    "1. Make subsets for each family\n",
+    "2. Apply ML models to all subsets\n",
+    "3. Combine the subsets\n",
+    "4. Compute error function\n",
+    "5. Choose the ML model which gives the min error\n",
+    "6. Apply to test data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separate train data set into \"ourtrain\" and \"ourtest\" (sorted, 70:30)\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "ourtrain, ourtest = train_test_split(train, test_size=0.3, random_state=None, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2100621, 6)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>family</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AUTOMOTIVE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BABY CARE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BEAUTY</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BEVERAGES</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BOOKS</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id       date  store_nbr      family  sales  onpromotion\n",
+       "0   0 2013-01-01          1  AUTOMOTIVE    0.0            0\n",
+       "1   1 2013-01-01          1   BABY CARE    0.0            0\n",
+       "2   2 2013-01-01          1      BEAUTY    0.0            0\n",
+       "3   3 2013-01-01          1   BEVERAGES    0.0            0\n",
+       "4   4 2013-01-01          1       BOOKS    0.0            0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check ourtrain\n",
+    "print(ourtrain.shape)\n",
+    "ourtrain.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(900267, 6)\n",
+      "2100621 + 900267 = 3000888\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>family</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2100621</th>\n",
+       "      <td>2100621</td>\n",
+       "      <td>2016-03-27</td>\n",
+       "      <td>49</td>\n",
+       "      <td>CELEBRATION</td>\n",
+       "      <td>32.000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2100622</th>\n",
+       "      <td>2100622</td>\n",
+       "      <td>2016-03-27</td>\n",
+       "      <td>49</td>\n",
+       "      <td>CLEANING</td>\n",
+       "      <td>1977.000</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2100623</th>\n",
+       "      <td>2100623</td>\n",
+       "      <td>2016-03-27</td>\n",
+       "      <td>49</td>\n",
+       "      <td>DAIRY</td>\n",
+       "      <td>3036.000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2100624</th>\n",
+       "      <td>2100624</td>\n",
+       "      <td>2016-03-27</td>\n",
+       "      <td>49</td>\n",
+       "      <td>DELI</td>\n",
+       "      <td>519.661</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2100625</th>\n",
+       "      <td>2100625</td>\n",
+       "      <td>2016-03-27</td>\n",
+       "      <td>49</td>\n",
+       "      <td>EGGS</td>\n",
+       "      <td>583.000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              id       date  store_nbr       family     sales  onpromotion\n",
+       "2100621  2100621 2016-03-27         49  CELEBRATION    32.000            0\n",
+       "2100622  2100622 2016-03-27         49     CLEANING  1977.000           26\n",
+       "2100623  2100623 2016-03-27         49        DAIRY  3036.000            0\n",
+       "2100624  2100624 2016-03-27         49         DELI   519.661            0\n",
+       "2100625  2100625 2016-03-27         49         EGGS   583.000            0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check ourtest\n",
+    "print(ourtest.shape)\n",
+    "print(len(ourtrain), \"+\", len(ourtest), \"=\", len(train.index))\n",
+    "ourtest.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Make subsets of *ourtrain* for each family"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AUTOMOTIVE' 'BABY CARE' 'BEAUTY' 'BEVERAGES' 'BOOKS' 'BREAD/BAKERY'\n",
+      " 'CELEBRATION' 'CLEANING' 'DAIRY' 'DELI' 'EGGS' 'FROZEN FOODS' 'GROCERY I'\n",
+      " 'GROCERY II' 'HARDWARE' 'HOME AND KITCHEN I' 'HOME AND KITCHEN II'\n",
+      " 'HOME APPLIANCES' 'HOME CARE' 'LADIESWEAR' 'LAWN AND GARDEN' 'LINGERIE'\n",
+      " 'LIQUOR,WINE,BEER' 'MAGAZINES' 'MEATS' 'PERSONAL CARE' 'PET SUPPLIES'\n",
+      " 'PLAYERS AND ELECTRONICS' 'POULTRY' 'PREPARED FOODS' 'PRODUCE'\n",
+      " 'SCHOOL AND OFFICE SUPPLIES' 'SEAFOOD'] \n",
+      "Number of unique values: 33\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check unique values of \"family\"\n",
+    "family_list = train[\"family\"].unique()\n",
+    "print(family_list, \"\\nNumber of unique values:\", len(family_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>family</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BABY CARE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>34</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>10</td>\n",
+       "      <td>BABY CARE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>67</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>BABY CARE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>100</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>12</td>\n",
+       "      <td>BABY CARE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>133</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>13</td>\n",
+       "      <td>BABY CARE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id       date  store_nbr     family  sales  onpromotion\n",
+       "1      1 2013-01-01          1  BABY CARE    0.0            0\n",
+       "34    34 2013-01-01         10  BABY CARE    0.0            0\n",
+       "67    67 2013-01-01         11  BABY CARE    0.0            0\n",
+       "100  100 2013-01-01         12  BABY CARE    0.0            0\n",
+       "133  133 2013-01-01         13  BABY CARE    0.0            0"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generates subsets for each family\n",
+    "def generate_subsets(family):\n",
+    "    subset = ourtrain.loc[train['family']==family, :]\n",
+    "    return subset\n",
+    "\n",
+    "# Generate all subsets\n",
+    "subsets = {}\n",
+    "for family in family_list:\n",
+    "    subsets.update({family:generate_subsets(family)})\n",
+    "\n",
+    "# Check\n",
+    "subsets['BABY CARE'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extracts features\n",
+    "def ext_features(df):\n",
+    "    return \n",
+    "\n",
+    "# Extracts targets\n",
+    "def ext_targets(df):\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Apply ML models to all subsets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Combine the subsets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Compute error function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Choose the ML model which gives the min error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Apply to test data set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,8 +684,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.9 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
