--- a/StoreSales/StoreSales_Competition.ipynb
+++ b/StoreSales/StoreSales_Competition.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing"
+    "# 1. Preprocessing"
    ]
   },
   {
@@ -160,7 +160,6 @@
    "outputs": [],
    "source": [
     "# Error Function (RMSLE)\n",
-    "\n",
     "def error(y_p, y_t):\n",
     "    # y_p: predictted (fitted)\n",
     "    # y_t: test (actual)\n",
@@ -175,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Blue print\n",
+    "## Blue print\n",
     "\n",
     "1. Make subsets for each family\n",
     "2. Separate train data set into \"ourtrain\" and \"ourtest\" (**sorted**, 70:30)\n",
@@ -190,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### cf) Check Correlation"
+    "### - Check Correlation"
    ]
   },
   {
@@ -375,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Make subsets of *ourtrain* for each family"
+    "# 2. Make subsets of each family"
    ]
   },
   {
@@ -524,7 +523,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Get new train and test data set"
+    "### - Check plots for each subsets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Get new train and test data set"
    ]
   },
   {
@@ -549,7 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. ML models"
+    "# 4. Apply ML models"
    ]
   },
   {
@@ -700,7 +713,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Choose the ML model which gives the min error"
+    "# 5. Choose the ML model which gives the min error"
    ]
   },
   {
@@ -709,13 +722,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5. Apply to test data set"
-   ]
   },
   {
    "cell_type": "code",
@@ -727,10 +733,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   "hash": "1945a49d8267038c199a72e8f61b6bfcbb9f4626ddb3ddff4ec56a3f45e14a7a"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
