--- a/StoreSales/StoreSales.ipynb
+++ b/StoreSales/StoreSales.ipynb
@@ -1403,7 +1403,7 @@
    "outputs": [],
    "source": [
     "# Use 4 pairs; \n",
-    "# From right to left, the periodogram falls off after Quarterly(4)\n",
+    "# From left to right, the periodogram drops off after Quarterly(4)\n",
     "from statsmodels.tsa.deterministic import CalendarFourier, DeterministicProcess\n",
     "\n",
     "fourier = CalendarFourier(freq=\"A\", order=4)  # 78 sin/cos pairs for \"A\"nnual seasonality\n",
