--- a/StoreSales/StoreSales.ipynb
+++ b/StoreSales/StoreSales.ipynb
@@ -1406,7 +1406,7 @@
     "# From left to right, the periodogram drops off after Quarterly(4)\n",
     "from statsmodels.tsa.deterministic import CalendarFourier, DeterministicProcess\n",
     "\n",
-    "fourier = CalendarFourier(freq=\"A\", order=4)  # 78 sin/cos pairs for \"A\"nnual seasonality\n",
+    "fourier = CalendarFourier(freq=\"A\", order=4)  # 4 sin/cos pairs for \"A\"nnual seasonality\n",
     "\n",
     "season_dp = DeterministicProcess(\n",
     "    index=seasonal.index,\n",
@@ -1444,7 +1444,7 @@
     "season_model = LinearRegression(fit_intercept=False)\n",
     "_ = season_model.fit(X_season, y_season)\n",
     "\n",
-    "# sales valued computed from season_model\n",
+    "# sales value computed from season_model\n",
     "y_season_pred = pd.Series(season_model.predict(X_season), index=y_season.index) \n",
     "\n",
     "# Forecasting next 365 days of sales\n",
